Fix icon jumping in thai post

--- a/css/index.css
+++ b/css/index.css
@@ -85,13 +85,17 @@ nav ul li {
   display: inline;
   margin-right: 0.4rem;
 }
+nav a {
+  display: inline-flex;
+  align-items: center;
+}
 nav .icon {
-  height: 1.5rem;
+  justify-content: center;
+  height: 1.625rem;
   border: none;
   display: inline;
   padding: 0;
-  margin: 0 0.5rem 0 0;
-  vertical-align: text-top;
+  margin: 0 0.4rem 0 0;
 }
 @media (max-width: 512px) {
   nav .icon {
